# TATLIN_task

./: CMakeLists.txt  README.md  config.txt
src/: main.cpp
src/config/: config.cpp  config.hpp
src/file_tape/: file_tape.cpp  file_tape.hpp
src/tape/: tape.hpp
src/tape_sorter/: tape_sorter.cpp  tape_sorter.hpp
